--- a/ui/src/app/home/exchange/exchange.component.html
+++ b/ui/src/app/home/exchange/exchange.component.html
@@ -1,4 +1,4 @@
-<div class="p-0 p-sm-3"></div>
+<div class="p-3"></div>
 <app-loader *ngIf="isLoading"></app-loader>
 <div *ngIf="!isLoading" class="bg-white border rounded-2">
     <div>
