--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -13,7 +13,7 @@
         <ul class="navbar-nav ">
           <li class="nav-item"><a routerLink="/books/list" class="nav-link">Home</a></li>
           <li class="nav-item"><a routerLink="/exchange" class="nav-link">Exchange</a></li>
-          <li class="nav-item"><a class="nav-link">About</a></li>
+          <li class="nav-item"><a routerLink="/about" class="nav-link">About</a></li>
           <!-- <li class="nav-item"><a class="nav-link">Contact</a></li> -->
         </ul>
         <div class="ms-auto d-md-flex">
